[Refactor] 채팅방 조회 로직 개선